@@ -31,9 +31,13 @@
 project(libbw CXX C)
 cmake_minimum_required(VERSION 2.6)
 
+option(BUILD_EXAMPLES "Build the example programs" ON)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 add_subdirectory(src)
-add_subdirectory(examples)
+
+if (BUILD_EXAMPLES)
+    add_subdirectory(examples)
+endif (BUILD_EXAMPLES)
 
 # vim: set sw=4 ts=4 et fdm=marker:
