@@ -1,3 +1,8 @@
+2011-04-17  Bernhard Walle <bernhard@bwalle.de>
+
+	* Add CMake build open 'BUILD_EXAMPLES' that allows to build the
+	  library only.
+
 2011-03-06  Bernhard Walle <bernhard@bwalle.de>
 
 	* Don't try to link against libcurses when libreadline has not been
